# ANIKA

./: .gitignore  README  README.md  presentation.pptx
auth_service/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
auth_service/src/: config.py  main.py
auth_service/src/db/: base.py
auth_service/src/db/migrations/: env.py
auth_service/src/db/migrations/versions/: 4784707b0e94_.py  9ee4b359f7af_.py  bcdc4b942878_.py
auth_service/src/dependencies/: config.py  db.py  tokens.py  users.py
auth_service/src/models/: users.py
auth_service/src/repositories/: users.py
auth_service/src/routes/: users.py
auth_service/src/schemes/: errors.py  tokens.py  users.py
auth_service/src/use_cases/: users.py
auth_service/src/utils/: enums.py  password.py  tokens.py
auth_service/tests/: conftest.py
auth_service/tests/fixtures/: app.py  db.py  users.py
auth_service/tests/integration/: conftest.py
auth_service/tests/integration/users/: conftest.py  test_login.py
auth_service/tests/utils/: db.py
frontend/: .gitignore  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.less
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/guard/: auth.guard.ts
frontend/src/pages/login-page/: login-page.component.html  (+2 more)
frontend/src/services/: auth.service.ts  topic.service.ts
messages_microservice/: Dockerfile  README.md  __init__.py  pyproject.toml  settings.toml
messages_microservice/src/: app.py  config.py  depends.py  logger.py
messages_microservice/src/database/: managers.py  models.py  repository.py
messages_microservice/src/handlers/: __init__.py  base.py  general.py  messages.py
messages_microservice/src/schemas/: bodies.py  exceptions.py  responses.py
messages_microservice/src/utils/: config.py  logger.py  search.py  topics.py  webhooks.py
topics_microservice/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
topics_microservice/src/: config.py  database.py  depends.py  main.py  models.py  schemas.py
topics_microservice/src/crud/: crud_partner.py  crud_partners.py  crud_permissions.py  crud_subscriptions.py  crud_topics.py
topics_microservice/src/migrations/: env.py
topics_microservice/src/migrations/versions/: 01bc26988f17_.py  0f62b6b9d357_.py  3bbebb410e5b_.py  60e687dfe0fa_.py  61e27af7866e_.py  68a0806cb3ff_.py  9be445b18fca_.py  9e46a83c8ffb_.py  b431e752f536_.py  b91297efccd1_.py  bf89472e7a8e_.py  c46ea028cb29_.py  caa509b185b4_.py
topics_microservice/src/routers/: partners.py  permissions.py  subscriptions.py  topics.py
(+40 files in other folders)
